src/components/sass/base/_typography.scss
.left-nav {
    background-color: $color-secondary-dark;
    width: 8rem;
    height: 100vh;
    font-size: 1rem;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: auto;
    text-align: center;
    margin-left: -.4rem;
    color: $color-tertiary-blue;


    &__text{
        font-family: sans-serif;
        margin-top: -4px;
        padding-bottom: 5px;
    }

    &__link{
        width: 100%;
        padding: .3rem;
        display: flex;
        flex-direction: column;
        align-items: center;
        
        &--active{
            background-color: $color-primary-dark;
            color: $color-primary-blue;

        }
    }


    
}

.account-container{
    display: flex;
    flex-direction: column;
    gap: .6rem;
    width: 100%;
  border-bottom: 1.5px solid  #00000053;

}

